; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_3ad.c_ad_initialize_agg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_3ad.c_ad_initialize_agg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aggregator = type { i32*, i64, i32 }

@null_mac_addr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aggregator*)* @ad_initialize_agg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ad_initialize_agg(%struct.aggregator* %0) #0 {
  %2 = alloca %struct.aggregator*, align 8
  store %struct.aggregator* %0, %struct.aggregator** %2, align 8
  %3 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %4 = icmp ne %struct.aggregator* %3, null
  br i1 %4, label %5, label %15

5:                                                ; preds = %1
  %6 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %7 = call i32 @ad_clear_agg(%struct.aggregator* %6)
  %8 = load i32, i32* @null_mac_addr, align 4
  %9 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %10 = getelementptr inbounds %struct.aggregator, %struct.aggregator* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 8
  %11 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %12 = getelementptr inbounds %struct.aggregator, %struct.aggregator* %11, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = load %struct.aggregator*, %struct.aggregator** %2, align 8
  %14 = getelementptr inbounds %struct.aggregator, %struct.aggregator* %13, i32 0, i32 0
  store i32* null, i32** %14, align 8
  br label %15

15:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @ad_clear_agg(%struct.aggregator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
